--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
 
 
 <!--Navbar-->
-<nav class="navbar navbar-expand-lg navbar-dark primary-color">
+<nav class="navbar navbar-expand-lg navbar-dark primary-color fixed-top">
 
   <!-- Navbar brand -->
   <a class="navbar-brand" href="#">Navbar</a>
@@ -75,6 +75,16 @@
 
 </nav>
 <!--/.Navbar-->
+
+<!--Mask-->
+<div id="intro" class="view">
+
+  <div class="mask">
+
+  </div>
+
+</div>
+<!--/.Mask-->
 
 <!--Card-->
 <div class="card m-5" style="width: 22rem;">
